<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">TickMark</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world</string>
    <string name="Group_name">Group Name</string>
    <string name="heading">TickMark</string>
    <string name="headingpagename">Login/Signup Page</string>
    <string name="signupbutton">New user-> Signup !</string>
    <string name="button2">Login</string>
    <string name="firstnametextbox">Enter first name:</string>
    <string name="lastnametextbox">Enter first name:</string>
    <string name="emailidtextbox">Enter emailid:</string>
    <string name="passwordtextbox">Enter password:</string>
    <string name="isstudentradio">Student</string>
    <string name="isleaderradio">Professor</string>
    <string name="registerbutton">Register</string>
    <string name="textView2_1">Enter emailid:</string>
    <string name="textView2_3">Enter password:</string>
    <string name="button2_1">Login</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="selectleader">Leader?</string>
    <string name="title_activity_attendee_mark_page">AttendeeMarkPageActivity</string>
    <string name="mark_Code">Mark Attendance</string>
    <string name="title_activity_attendee_poll_page">AttendeePollPageActivity</string>
    <string name="title_activity_leader_home_page">LeaderHomePageActivity</string>
    <string name="title_activity_leader_group_page">LeaderGroupPageActivity</string>
    <string name="title_activity_take_attendance_page">TakeAttendancePageActivity</string>
    <string name="title_activity_attendance_report_page">AttendanceReportPageActivity</string>
    <string name="title_activity_take_poll_page">TakePollPageActivity</string>
    <string name="pollquestion"></string>
    <string name="title_activity_poll_report_page">PollReportPageActivity</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="take_a_poll">Take A Poll</string>
    <string name="take_attendance1">Mark Attendance</string>
    <string name="take_a_poll1">Answer Poll</string>
    <string name="ok">OK</string>
    <string name="End">End</string>
    <string name="student_present">Student Present</string>
    <string name="student_absent">Student Absent</string>
    <string name="Poll_Question">Poll Question</string>
    <string name="option1">(1)</string>
    <string name="option2">(2)</string>
    <string name="option3">(3)</string>
    <string name="option4">(4)</string>
    <string android:id="@+id/string1" name="Generate_Code" android:layout_width="wrap_content" android:layout_height="wrap_content">Generate Code</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name:</string>
    <string name="number_of_attendee">Number of Attendees</string>
    <string name="submit">Submit</string>
    <string name="question">Question:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="find_group">Find Your Group</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
	<string name="back">&lt;</string>
	<string name="next">&gt;</string>
	<string name="course_id">Course ID: </string>
    <string name="course_time">Course Time: </string>
    <string name="leader_home">Leader Home Page</string>
    <string name="generate_report">Download Report</string>
    <string name="group_id">Group ID: </string>
    <string name="report">Generate Report</string>
    <string name="loginbutton">Login</string>
    <string name="loginemailtextbox">Enter emailid: </string>
    <string name="loginpswdtextbox">Enter password: </string>
    <string name="Enterbutton">Enter to login! </string>
    <string name="message">Please enter the code</string>
</resources>
