<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".LeaderGroupPageActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group" 
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name" 
        android:background="@drawable/text_view"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
   
    <EditText
    android:id="@+id/enter_course_name"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/text_view"
        android:layout_margin="10dp"
        android:inputType="text"
    />
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_id" 
        android:background="@drawable/text_view"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
   
    <EditText
    android:id="@+id/enter_course_id"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:inputType="text"
    android:background="@drawable/text_view"
        android:layout_margin="10dp"
     />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_time" 
        android:background="@drawable/text_view"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
   
    <EditText
    android:id="@+id/enter_course_time"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/text_view"
        android:layout_margin="10dp"
        android:inputType="text"
    />
    
      <Button
        android:id="@+id/submit_group"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/submit" 
        android:background="@drawable/mybutton"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal|bottom" 
        

         />

</LinearLayout>
