<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
				  <TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/group_name" 
				        android:textSize="20sp"
				        android:padding="10dp"
				        android:background="@drawable/text_view"
				        android:layout_margin="10dp"/>
				    <Spinner
				        android:id="@+id/groupname"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content" />
    </LinearLayout>
      
					<TextView
			            android:id="@+id/codeText"
			            android:layout_width="match_parent"
			            android:layout_height="120dp"
			            android:background="@drawable/text_view"
			            android:textSize="40sp"
			            android:gravity="center"/>
     <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
					<TextView
        				  	android:id="@+id/timerValue"
        					android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:background="@drawable/text_view"
	         				android:gravity="center"
	          				android:layout_marginLeft="10dp"
	        				android:layout_marginTop="10dp"
	        				android:textSize="40sp"
	        				android:textColor="#000000"
	        				android:text="@string/timerVal" />
					<Button
	        				android:id="@+id/startButton"
	        				android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	           				android:background="@drawable/mybutton"
	         				android:gravity="center"
	          				android:layout_marginLeft="10dp"
	        				android:text="@string/startButtonLabel" />
					<Button
	        				android:id="@+id/pauseButton"
	        				android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	           				android:background="@drawable/mybutton"
	         				android:gravity="center"
	          				android:layout_marginLeft="10dp"
	          				android:layout_marginRight="3dp"
	        				android:text="@string/pauseButtonLabel" />
	</LinearLayout>
	
     
<Button
        android:id="@+id/generatecode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/mybutton"
        android:text="@string/Generate_Code"
        android:gravity="center"/>

      <Button
        android:id="@+id/end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/mybutton"
        android:text="@string/End" 
        android:gravity="center"/>
      
       
       

</LinearLayout>