<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".LeaderGroupPageActivity" >
  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
				  <TextView
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/group_name" 
				        android:textSize="20sp"
				        android:padding="10dp"
				        android:background="@drawable/text_view"
				        android:layout_margin="10dp"/>
				    <Spinner
				        android:id="@+id/groupname"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content" />
    </LinearLayout>
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >     
					    <TextView
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/question" 
					        android:textSize="18sp"
					        android:background="@drawable/text_view"
					        android:layout_margin="10dp"/>
					    
					    <EditText 
					        android:id="@+id/Poll_question_professor"
					        android:layout_width="match_parent"
        					android:layout_height="wrap_content"
					        />
</LinearLayout>
   
   
<RadioGroup 
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@drawable/text_view"
    android:layout_margin="10dp"
    android:orientation="vertical">
		 <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >   
						    <TextView
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/option1" 
					        android:textSize="18sp"
					        android:background="@drawable/text_view"
					        android:layout_margin="10dp"/>
						    <EditText 
							        android:id="@+id/option1"
							        android:layout_width="match_parent"
		        					android:layout_height="wrap_content"/>
			</LinearLayout>	
			 <LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal" > 		    
					   <TextView
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/option2" 
					        android:textSize="18sp"
					        android:background="@drawable/text_view"
					        android:layout_margin="10dp"/>
					    <EditText 
							        android:id="@+id/option2"
							        android:layout_width="match_parent"
		        					android:layout_height="wrap_content"/>
					    
				</LinearLayout>
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal" > 	    
					  <TextView
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/option3" 
					        android:textSize="18sp"
					        android:background="@drawable/text_view"
					        android:layout_margin="10dp"/>
					    <EditText 
							        android:id="@+id/option3"
							        android:layout_width="match_parent"
		        					android:layout_height="wrap_content"/>
					    
				</LinearLayout>
				 <LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal" > 	    
					    <TextView
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/option4" 
					        android:textSize="18sp"
					        android:background="@drawable/text_view"
					        android:layout_margin="10dp"/>
					    <EditText 
							        android:id="@+id/option4"
							        android:layout_width="match_parent"
		        					android:layout_height="wrap_content"/>
				</LinearLayout>
</RadioGroup>
   
    
    
   
      <Button
        android:id="@+id/submit_poll"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/submit" 
        android:layout_gravity="center_horizontal"
        android:background="@drawable/mybutton"
        android:textColor="#ffffff"
        android:layout_margin="20dp"/>
      <Button
        android:id="@+id/generatereport"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/report" 
        android:layout_gravity="center_horizontal"
        android:background="@drawable/mybutton"
        android:textColor="#ffffff"
        android:layout_margin="20dp"/>

</LinearLayout>
