<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical" >
<LinearLayout 
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name" 
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"
         />

  <TextView
      	android:id="@+id/poll_groupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"></TextView>
 </LinearLayout>
  <LinearLayout 
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question" 
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"
         />
  <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"/>
     </LinearLayout>
<LinearLayout 
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option1" 
        android:textSize="18sp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"

        />
       <TextView
	        android:id="@+id/option1_Label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/text_view"
	        android:layout_marginTop="10dp"/>
       <TextView
	        android:id="@+id/option1_Percent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/text_view"
	         android:layout_marginLeft="5dp"
	        android:layout_marginTop="10dp"/>
   </LinearLayout>   
   <LinearLayout 
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option2" 
        android:textSize="18sp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"

        />
       <TextView
	        android:id="@+id/option2_Label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/text_view"
	        android:layout_marginTop="10dp"/>
       <TextView
	        android:id="@+id/option2_Percent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/text_view"
	         android:layout_marginLeft="5dp"
	        android:layout_marginTop="10dp"/>
   </LinearLayout>       
      
    <LinearLayout 
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option3" 
        android:textSize="18sp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"

        />
       <TextView
	        android:id="@+id/option3_Label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/text_view"
	        android:layout_marginTop="10dp"/>
       <TextView
	        android:id="@+id/option3_Percent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/text_view"
	         android:layout_marginLeft="5dp"
	        android:layout_marginTop="10dp"/>
   </LinearLayout>   
   
     <LinearLayout 
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option4" 
        android:textSize="18sp"
        android:background="@drawable/text_view"
        android:layout_margin="10dp"

        />
       <TextView
	        android:id="@+id/option4_Label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/text_view"
	        android:layout_marginTop="10dp"/>
       <TextView
	        android:id="@+id/option4_Percent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/text_view"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="10dp"/>
   </LinearLayout>   
      <Button
        android:id="@+id/ok"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/ok"  
        android:background="@drawable/mybutton"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        />
</LinearLayout>
