<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/text_view"
        android:padding="10dp"
        android:text="@string/group_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/coursename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="@drawable/text_view"
        android:ems="10" />
</LinearLayout>
        
   

    <TextView
        android:id="@+id/showcodeview"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/text_view"
        android:gravity="center"
        android:textSize="40sp" />
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/text_view"
        android:padding="10dp"
        android:text="@string/message"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/typecodeeditbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/generatecode1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/mybutton"
        android:paddingLeft="25dp"
        android:text="@string/mark_Code"
        android:onClick="" />

</LinearLayout>